--- a/.github/workflows/bot-slots1.yml
+++ b/.github/workflows/bot-slots1.yml
@@ -29,3 +29,20 @@ jobs:
           TOKEN: ${{ secrets.TOKEN }}
         run: |
           python bot1.py
+
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Run bot
+        env:
+          TOKEN: ${{ secrets.TOKEN }}
+        run: |
+          python bot1.py
