--- a/.github/workflows/bot-slots1.yml
+++ b/.github/workflows/bot-slots1.yml
@@ -1,18 +1,24 @@
-name: bot-slots1
+import os
+import asyncio
+from telegram.ext import Application, CommandHandler
 
-on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
+TOKEN = os.getenv("TOKEN")
 
-jobs:
-  run-bot:
-    runs-on: ubuntu-latest
+async def start(update, context):
+    await update.message.reply_text("🤖 Bot Slots ativo!")
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+async def main():
+    if not TOKEN:
+        raise RuntimeError("TOKEN não encontrado nos Secrets")
+
+    application = Application.builder().token(TOKEN).build()
+    application.add_handler(CommandHandler("start", start))
+
+    print("Bot rodando...")
+    await application.run_polling()
+
+if __name__ == "__main__":
+    asyncio.run(main())
 
       - name: Setup Python
         uses: actions/setup-python@v5
